<resources>
    <string name="app_name">FineCut - BarberShop</string>
    <string name="friendly_professional"><![CDATA[Friendly & Professional]]></string>
    <string name="your">Your</string>
    <string name="barber_shop">BarberShop!</string>
    <string name="fine_cut_logo">Fine Cut Logo</string>
    <string name="best_in_town">Best in Town!</string>
    <string name="the">The </string>
    <string name="barber">Barber</string>
    <string name="shop">Shop</string>
    <string name="that"> That</string>
    <string name="you_can_trust">You Can Trust.</string>
    <string name="please_log_in_to_the_world_of_beauty">Please log in to the world of beauty!</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register">Register!</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in">Log In</string>
    <string name="or_sign_in_using">or sign in using</string>
    <string name="facebook_login">Facebook LogIn</string>
    <string name="google_login">Google LogIn</string>
    <string name="you_don_t_have_an_account">You don\'t have an account?</string>
    <string name="sign_up_now">Sign Up Now!</string>
    <string name="you_are_one_step_away_to_become_more_beautiful">You are one step away to become more beautiful!</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="first_name">First Name</string>
    <string name="surname">Surname</string>
    <string name="phone_number">Phone Number</string>
    <string name="sign_up">Sign Up</string>
    <string name="available_barbers">Available Barbers</string>
    <string name="barber_photo">Barber Photo</string>
    <string name="barber_name">Barber Name</string>
    <string name="description">Description</string>
    <string name="logo">Logo</string>
    <string name="see_reviews">See Reviews</string>
    <string name="book_a_visit_with_this_barber">Book a visit with this barber!</string>
    <string name="select_a_date">Select a date</string>
    <string name="date">Date:</string>
    <string name="time_slot">Time Slot:</string>
    <string name="service">Service:</string>
    <string name="enter_discount_code_here">Enter Discount Code Here</string>
    <string name="total">Total:</string>
    <string name="book">Book!</string>
    <string name="_35">35$</string>
    <string name="select_a_time_slot">Select a time slot</string>
    <string name="select_a_service">Select a service</string>
    <string name="apply_discount">Apply Discount!</string>
    <string name="client_name">Client Name</string>
    <string name="barber_name_reviews">Barber Name Reviews</string>
    <string name="user_image">User Image</string>
    <string name="user_name">User Name</string>
    <string name="my_profile">My Profile</string>
    <string name="offers">Offers</string>
    <string name="my_bookings">My Bookings</string>
    <string name="rate_us">Rate Us</string>
    <string name="rate_app">Rate App</string>
    <string name="log_out">Log Out</string>
    <string name="userImagePlaceHolder">https://cdn-icons-png.flaticon.com/512/456/456212.png</string>
    <string name="loyalty_points">Loyalty points</string>
    <string name="edit_details">Edit Details</string>
    <string name="delete_account">Delete Account</string>
    <string name="edit_first_name">Edit First Name</string>
    <string name="edit_surname">Edit Surname</string>
    <string name="edit_phone_number">Edit Phone Number</string>
    <string name="edit_password">Edit Password</string>
    <string name="save">Save</string>
    <string name="date_time">Date/Time</string>
    <string name="service_name">Service Name</string>
    <string name="amount_paid">Amount Paid:</string>
    <string name="click_a_booking_to_leave_a_review">Click a completed booking to leave a review!</string>
    <string name="write_a_comment">Write a comment</string>
    <string name="rate_barber">Rate Barber</string>
    <string name="available_until">Available Until:</string>
    <string name="offer_code">Offer Code</string>
    <string name="review_description">Offer Description: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="google_maps_review_url">https://maps.google.com/maps?cid=ChIJzdK8Dz8bdkgRj698y3CmyZo&amp;daddr=ChIJzdK8Dz8bdkgRj698y3CmyZo&amp;action=review</string>
    <string name="cancel">Cancel</string>
    <string name="use_loyalty_points">Use Loyalty Points</string>

</resources>