<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/rich_black"
    tools:context=".activities.IntroActivity">

    <LinearLayout
        android:id="@+id/llIntro"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvu1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center|end"
            android:paddingEnd="3dp"
            android:paddingStart="0dp"
            android:text="@string/your"
            android:textColor="@color/munsell_blue" />

        <TextView
            android:id="@+id/tvu2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center|start"
            android:text="@string/friendly_professional"
            android:textColor="@color/salmon_pink" />

        <TextView
            android:id="@+id/tvu3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center|start"
            android:paddingStart="3dp"
            android:paddingEnd="0dp"
            android:text="@string/barber_shop"
            android:textColor="@color/munsell_blue" />
    </LinearLayout>


    <ImageView
        android:id="@+id/logo"
        android:layout_width="400dp"
        android:layout_height="270dp"
        android:contentDescription="@string/fine_cut_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llIntro"
        app:srcCompat="@drawable/finecut_logo" />

    <TextView
        android:id="@+id/u4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="90dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/best_in_town"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <TextView
        android:id="@+id/u5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/the"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/u4" />

    <TextView
        android:id="@+id/u6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/barber"
        android:textColor="@color/salmon_pink"
        android:textSize="28sp"
        app:layout_constraintStart_toEndOf="@+id/u5"
        app:layout_constraintTop_toBottomOf="@+id/u4" />

    <TextView
        android:id="@+id/u7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/shop"
        android:textColor="@color/munsell_blue"
        android:textSize="28sp"
        app:layout_constraintStart_toEndOf="@+id/u6"
        app:layout_constraintTop_toBottomOf="@+id/u4" />

    <TextView
        android:id="@+id/u8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/that"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintStart_toEndOf="@+id/u7"
        app:layout_constraintTop_toBottomOf="@+id/u4" />

    <TextView
        android:id="@+id/u9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/you_can_trust"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/u5" />

</androidx.constraintlayout.widget.ConstraintLayout>