<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LogInActivity">

    <LinearLayout
        android:id="@+id/llLogIn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvu1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center|end"
            android:paddingEnd="3dp"
            android:paddingStart="0dp"
            android:text="@string/your"
            android:textColor="@color/munsell_blue" />

        <TextView
            android:id="@+id/tvu2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center|start"
            android:text="@string/friendly_professional"
            android:textColor="@color/salmon_pink" />

        <TextView
            android:id="@+id/tvu3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center|start"
            android:paddingStart="3dp"
            android:paddingEnd="0dp"
            android:text="@string/barber_shop"
            android:textColor="@color/munsell_blue" />
    </LinearLayout>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="180dp"
        android:layout_height="140dp"
        android:contentDescription="@string/fine_cut_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llLogIn"
        app:srcCompat="@drawable/finecut_logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/please_log_in_to_the_world_of_beauty"
        android:textColor="@color/munsell_blue"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <EditText
        android:id="@+id/etLoginEmail"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:fontFamily="@font/poppins"
        android:gravity="center|start"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@color/rich_black"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/etLoginPassword"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:fontFamily="@font/poppins"
        android:gravity="center|start"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/rich_black"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etLoginEmail"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tvBtnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/register"
        android:textColor="@color/salmon_pink"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/etLoginPassword"
        app:layout_constraintTop_toBottomOf="@+id/etLoginPassword" />

    <TextView
        android:id="@+id/tvBtnForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/forgot_password"
        android:textColor="@color/munsell_blue"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/etLoginPassword"
        app:layout_constraintTop_toBottomOf="@+id/etLoginPassword" />

    <TextView
        android:id="@+id/ul4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/or_sign_in_using"
        android:textColor="@color/munsell_blue"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogIn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogIn"
        android:layout_width="190dp"
        android:layout_height="60dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/button_selector"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textColor="@color/rich_black"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5
"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etLoginPassword" />

    <ImageView
        android:id="@+id/ivBtnFaceBookLogIn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/facebook_login"
        app:layout_constraintStart_toStartOf="@+id/ul4"
        app:layout_constraintTop_toBottomOf="@+id/ul4"
        app:srcCompat="@drawable/facebook_icon" />

    <ImageView
        android:id="@+id/ivBtnGoogleLogIn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/google_login"
        app:layout_constraintEnd_toEndOf="@+id/ul4"
        app:layout_constraintTop_toBottomOf="@+id/ul4"
        app:srcCompat="@drawable/google_icon" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ul4">

        <TextView
            android:id="@+id/tvul1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center|end"
            android:text="@string/you_don_t_have_an_account"
            android:textColor="@color/salmon_pink" />

        <TextView
            android:id="@+id/tvBtnSignUpNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center|start"
            android:paddingStart="5dp"
            android:paddingEnd="0dp"
            android:text="@string/sign_up_now"
            android:textColor="@color/munsell_blue"
            android:textSize="16sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>