<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignUpActivity">

    <LinearLayout
        android:id="@+id/llSignUp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvus1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center|end"
            android:paddingStart="0dp"
            android:paddingEnd="3dp"
            android:text="@string/your"
            android:textColor="@color/munsell_blue" />

        <TextView
            android:id="@+id/tvus2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center|start"
            android:text="@string/friendly_professional"
            android:textColor="@color/salmon_pink" />

        <TextView
            android:id="@+id/tvus3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center|start"
            android:paddingStart="3dp"
            android:paddingEnd="0dp"
            android:text="@string/barber_shop"
            android:textColor="@color/munsell_blue" />
    </LinearLayout>

    <ImageView
        android:id="@+id/signUpLogo"
        android:layout_width="160dp"
        android:layout_height="120dp"
        app:srcCompat="@drawable/finecut_logo"
        android:contentDescription="@string/fine_cut_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llSignUp"
        />

    <TextView
        android:id="@+id/tvus4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/you_are_one_step_away_to_become_more_beautiful"
        android:textColor="@color/munsell_blue"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpLogo" />

    <EditText
        android:id="@+id/etSignUpEmail"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:fontFamily="@font/poppins"
        android:gravity="center|start"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@color/rich_black"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSurnameSignUp"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/etSignUpPassword"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:fontFamily="@font/poppins"
        android:gravity="center|start"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/rich_black"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPhoneSignUp"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/etSignUpConfirmPassword"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:fontFamily="@font/poppins"
        android:gravity="center|start"
        android:hint="@string/confirm_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/rich_black"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSignUpPassword"
        tools:ignore="TextContrastCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignUp"
        android:layout_width="190dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_selector"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/rich_black"
        android:textColorHint="@color/gray"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSignUpConfirmPassword" />

    <EditText
        android:id="@+id/etFirstNameSignUp"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:fontFamily="@font/poppins"
        android:gravity="center|start"
        android:hint="@string/first_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="@color/rich_black"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvus4"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/etSurnameSignUp"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:fontFamily="@font/poppins"
        android:gravity="center|start"
        android:hint="@string/surname"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="@color/rich_black"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFirstNameSignUp"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/etPhoneSignUp"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:fontFamily="@font/poppins"
        android:gravity="center|start"
        android:hint="@string/phone_number"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:padding="10dp"
        android:textColor="@color/rich_black"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSignUpEmail"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>