<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clDrawer"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/munsell_blue"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/user_name"
            android:textColor="@color/rich_black"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivUserProfileImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/user_image"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="@+id/tvUserName"
            app:layout_constraintStart_toStartOf="@+id/tvUserName"
            app:layout_constraintTop_toBottomOf="@+id/tvUserName"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.RoundImageView"
            tools:ignore="ImageContrastCheck"
            tools:src="@tools:sample/avatars" />

        <ProgressBar
            android:id="@+id/pbUserImageDrawer"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/ivUserProfileImage"
            app:layout_constraintEnd_toEndOf="@+id/ivUserProfileImage"
            app:layout_constraintStart_toStartOf="@+id/ivUserProfileImage"
            app:layout_constraintTop_toTopOf="@+id/ivUserProfileImage"
            tools:visibility="visible" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnMyProfile"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button3_selector"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:text="@string/my_profile"
            android:textAllCaps="false"
            android:textColor="@color/rich_black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivUserProfileImage"
            tools:ignore="TouchTargetSizeCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnMyBookings"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button3_selector"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:text="@string/my_bookings"
            android:textAllCaps="false"
            android:textColor="@color/rich_black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnMyProfile"
            tools:ignore="TouchTargetSizeCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnOffers"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button3_selector"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:text="@string/offers"
            android:textAllCaps="false"
            android:textColor="@color/rich_black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnMyBookings"
            tools:ignore="TouchTargetSizeCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRateUs"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button3_selector"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:text="@string/rate_us"
            android:textAllCaps="false"
            android:textColor="@color/rich_black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnOffers"
            tools:ignore="TouchTargetSizeCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRateApp"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button3_selector"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:text="@string/rate_app"
            android:textAllCaps="false"
            android:textColor="@color/rich_black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnRateUs"
            tools:ignore="TouchTargetSizeCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogOut"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/button3_selector"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:text="@string/log_out"
            android:textAllCaps="false"
            android:textColor="@color/rich_black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnRateApp"
            tools:ignore="TouchTargetSizeCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>